--- a/Portal/media/skins/Gold/main.css
+++ b/Portal/media/skins/Gold/main.css
@@ -717,54 +717,16 @@ tr.strike td
 }
 
 
+
+
+
+
+
+
+
+
+
 /* Activities */
-.previous-activities, .next-activities
-{
-	display: block;
-	width: 33px;
-	height: 33px;
-	bottom: 10px;
-	position: absolute;
-	z-index: 1000;
-}
-
-.previous-activities:hover, .next-activities:hover
-{
-	background-color: inherit;
-}
-
-.previous-activities
-{
-	background: Transparent url(Images/arrows.png) no-repeat 0 0;
-	left: 10px;
-}
-
-.next-activities
-{
-	background: Transparent url(Images/arrows.png) no-repeat -33px 0;
-	right: 10px;
-}
-
-.activityFilter
-{
-	margin-left: 5px;
-	margin-top: 5px;
-	display: block;
-	right: inherit;
-	left: inherit;
-	position: relative;
-}
-
-.sumActivities
-{
-	margin-left: 15px;
-	margin-top: 5px;
-	display: block;
-	float: left;
-	color: #999;
-	font-style: italic;
-}
-
 .days
 {
 	position: relative;
@@ -782,10 +744,11 @@ tr.strike td
 .header
 {
 	display: block;
-	height: 18px;
-	background-color: #dfd;
+	height: 16px;
+	background-color:#c9e6f9;
 	border: solid 1px #999;
 	margin: 1px 1px 2px 1px;
+	padding-top:2px;
 	font-size: 12px;
 	color: #333;
 	text-align: center;
@@ -793,40 +756,70 @@ tr.strike td
 
 .days .weekEnd
 {
-	background-color: #fdd;
+	background-color:#c0ddf0;
 }
 
 .days .hour
 {
 	display: block;
-	height: 14px;
-	background-color: #eee;
+	height: 12px;
+	background-color:#c9e6f9;
 	margin: 1px;
 	font-size: 8px;
 	color: #666;
 	text-align: right;
 	vertical-align: top;
 	cursor: pointer;
+	border:solid 1px Transparent;
 }
 
 .days .hour:hover
 {
-	background-color: #aaf;
+	border:solid 1px #999;
 }
 
 .days .work
 {
-	background-color: #ddd;
+	background-color:#c0ddf0;
 }
 
 .days .now
 {
-	background-color: #afa;
-	font-weight: bolder;
+	background-image:url(Images/calendar-now.png);
+	background-repeat:no-repeat;
 }
 
 
-.days .activity, .days .activitySelected
+.activityFilter
+{
+	margin-left: 5px;
+	margin-top: 5px;
+	display: block;
+	right: inherit;
+	left: inherit;
+	position: relative;
+}
+
+.days .activity
+{
+	position: absolute;
+	display: block;
+	width: 40px;
+	background-color: #fafaff;
+	font-size: 10px;
+	color: #444;
+	overflow: hidden;
+	border: dashed 1px #333;
+	padding: 2px;
+	cursor: pointer;
+}
+
+.days .activity:hover
+{
+	border: solid 1px #333;
+}
+
+.days .activitySelected
 {
 	position: absolute;
 	display: block;
@@ -862,6 +855,16 @@ tr.strike td
 	z-index: 1000;
 	border: solid 1px Black;
 }
+
+
+
+
+
+
+
+
+
+
 
 
 /* Tree Menu */
