--- a/Portal/media/skins/Green/steel/steel.css
+++ b/Portal/media/skins/Green/steel/steel.css
@@ -161,11 +161,11 @@ http://ra-ajax.org
 
 .sliding-menu
 {
-	position:relative;
-	overflow:hidden;
-	border-left:solid 1px #999;
-	border-right:solid 1px #999;
-	border-bottom:solid 1px #999;
+    position: relative;
+    overflow: hidden;
+    border-left: solid 1px #999;
+    border-right: solid 1px #999;
+    border-bottom: solid 1px #999;
 }
 
 .bread-crumb-parent
@@ -933,22 +933,24 @@ http://ra-ajax.org
 
 
 /* Extended Button */
-.button {
+.button
+{
 	width: auto;
 	border: none 0;
 	background-color: Transparent;
 	margin-bottom: 3px;
+	background:Transparent url('wheel32.JPG') no-repeat 0 0;
 }
-
 
 .button .bLeft
 {
-	background:Transparent url('button.png') no-repeat 0 0;
+    margin-left:27px;
+ 	background:Transparent url('button.png') no-repeat 0 0;
 	padding-left:13px;
 	display:block;
 	*display:inline-block;
 }
-
+ 
 .button .bCenter
 {
 	background:Transparent url('button.png') repeat-x 0 -50px;
@@ -973,7 +975,11 @@ http://ra-ajax.org
 	*display:inline-block;
 }
 
-.button:hover { }
+.button:hover 
+{
+ 	color:Black;
+  
+}
 
 .button:hover .bLeft
 {
@@ -988,6 +994,14 @@ http://ra-ajax.org
 .button:hover .bRight
 {
 	background:Transparent url('button.png') no-repeat right -100px;
+}
+
+.button-selected
+{
+ 	color:Navy;
+ 	background-image: url('wheel32.JPG');
+
+  
 }
 
 .button-selected .bLeft
