--- a/Portal/media/skins/Green/portalSkins/portalSkins.css
+++ b/Portal/media/skins/Green/portalSkins/portalSkins.css
@@ -52,7 +52,7 @@
 	display: block;
 	margin-left: -20px;
 	margin-right: -20px;
-	background-color: #FFFFFF;
+	background-color: #DDE693;
 }
 
 .no-background .light-window_content
